python/executable/build/bdist.macosx-10.8-x86_64/python2.7-standalone/app/collect/pysdif/sdif.h


typedef struct SdifFileS SdifFileT;
typedef enum SdifHashIndexTypeE
{
  eHashChar,
  eHashInt4
} SdifHashIndexTypeET;
typedef struct SdifHashTableS SdifHashTableT;
struct SdifHashTableS
{
  SdifHashNT* *Table;		
  unsigned int HashSize;	
  SdifHashIndexTypeET IndexType;
  void (*Killer)(void *); 
  unsigned int NbOfData;	
} ;
#   define SdiffPosT            long
#   define SdiffPosT            long
typedef uint16_t       SdifUInt2;
typedef uint32_t       SdifUInt4;
typedef unsigned short SdifUInt2;
typedef unsigned int   SdifUInt4;
typedef SdifUInt4      SdifSignature;
typedef double         SdifFloat8;
typedef enum SdifSignatureE
{
  eSDIF = SdifSignatureConst('S','D','I','F'), 
  e1NVT = SdifSignatureConst('1','N','V','T'), 
  e1TYP = SdifSignatureConst('1','T','Y','P'), 
  e1MTD = SdifSignatureConst('1','M','T','D'), 
  e1FTD = SdifSignatureConst('1','F','T','D'), 
  e1IDS = SdifSignatureConst('1','I','D','S'), 
  eSDFC = SdifSignatureConst('S','D','F','C'), 
  eENDC = SdifSignatureConst('E','N','D','C'), 
  eENDF = SdifSignatureConst('E','N','D','F'), 
  eFORM = SdifSignatureConst('F','O','R','M'), 
  eEmptySignature = SdifSignatureConst('\0','\0','\0','\0')
} SdifSignatureET;
typedef enum SdifDataTypeE
{
  eText     = 0x0301,
  eChar     = 0x0301,
  eFloat4   = 0x0004,
  eFloat8   = 0x0008,
  eInt1     = 0x0101,
  eInt2     = 0x0102,
  eInt4     = 0x0104,
  eInt8     = 0x0108,
  eUInt1    = 0x0201,
  eUInt2    = 0x0202,
  eUInt4    = 0x0204,
  eUInt8    = 0x0208,
  eFloat4a  = 0x0001,       
  eFloat4b  = 0x0020,       
  eFloat8a  = 0x0002,       
  eFloat8b  = 0x0040    
} SdifDataTypeET;
typedef SdifListT       *SdifListP;
typedef struct SdifNameValuesLS SdifNameValuesLT;
struct SdifNameValuesLS
{
    SdifListT*              NVTList;  
    SdifNameValueTableT*    CurrNVT;
    SdifUInt4               HashSize;
};
typedef struct SdifStreamIDTableS SdifStreamIDTableT;
struct SdifStreamIDTableS
{
    SdifHashTableT* SIDHT;
    SdifUInt4       StreamID;
    SdifFloat8      Time;       
} ;
typedef struct SdifMatrixTypeS SdifMatrixTypeT;
struct SdifMatrixTypeS
{
  SdifSignature     Signature;
  SdifMatrixTypeT*  MatrixTypePre;
  SdifListT*        ColumnUserList; 
  SdifUInt4       NbColumnDef; 
  SdifModifModeET ModifMode;
};
typedef struct SdifFrameTypeS SdifFrameTypeT;
struct SdifFrameTypeS
{
  SdifSignature Signature;
  SdifFrameTypeT* FrameTypePre;
  SdifHashTableT *ComponentUseHT;
  SdifUInt4       NbComponentUse;
  SdifUInt4       NbComponent;
  SdifModifModeET ModifMode;
};
typedef struct SdifMatrixHeaderS SdifMatrixHeaderT;
struct SdifMatrixHeaderS
{
  SdifSignature  Signature;
  SdifDataTypeET DataType; 
  SdifUInt4      NbRow;
  SdifUInt4      NbCol;
} ;
typedef struct SdifOneRowS SdifOneRowT;
struct SdifOneRowS
{
  SdifDataTypeET DataType;
  SdifUInt4      NbData;
  DataTypeUT     Data;
  SdifUInt4      NbGranuleAlloc;
} ;
typedef struct SdifMatrixDataS SdifMatrixDataT;
struct SdifMatrixDataS
{
  SdifMatrixHeaderT *Header;
  int               ForeignHeader;  
  SdifUInt4         Size;       
  DataTypeUT        Data;       
  SdifUInt4         AllocSize;  
};
typedef struct SdifFrameHeaderS SdifFrameHeaderT;
struct SdifFrameHeaderS
{
  SdifSignature Signature;
  SdifUInt4  Size;
  SdifUInt4  NbMatrix;
  SdifUInt4  NumID;
  SdifFloat8 Time;
} ;
typedef struct SdifTimePositionLS SdifTimePositionLT;
struct SdifTimePositionLS
{
    SdifListT*          TimePosList;
};
typedef struct SdifSignatureTabS SdifSignatureTabT;
struct SdifSignatureTabS
{
  SdifUInt4 NbSignMax;
  SdifUInt4 NbSign;
  SdifSignature* Tab;
};
typedef struct SdifSelectIntMaskS
{
    SdifUInt4   num;            
    SdifUInt4   max;            
    int        *mask;           
    int         openend;        
} SdifSelectIntMaskT, *SdifSelectIntMaskP;
typedef struct
{
    char        *filename,      
                *basename;      
    SdifListP   stream, frame, matrix, column, row, time;
    SdifSelectIntMaskT streammask;
    SdifSelectIntMaskT rowmask;
    SdifSelectIntMaskT colmask;
} SdifSelectionT;
typedef enum SdifErrorTagE
{
    eFalse   = 0,
    eUnknown = 0,
    eTrue    = 1,
    eNoError = 1,
    eTypeDataNotSupported,
    eNameLength,
    eEof,       
    eReDefined,
    eUnDefined,
    eSyntax,
    eBadTypesFile,
    eBadType,
    eBadHeader,
    eRecursiveDetect,
    eUnInterpreted,
    eOnlyOneChunkOf,
    eUserDefInFileYet,
    eBadMode,
    eBadStdFile,
    eReadWriteOnSameFile,
    eBadFormatVersion,
    eMtrxUsedYet,
    eMtrxNotInFrame,
    eGlobalError,
    eFreeNull = eGlobalError,
    eAllocFail,
    eArrayPosition,
    eFileNotFound,
    eInvalidPreType,
    eAffectationOrder,
    eNoModifErr,
    eNotInDataTypeUnion,
    eNotFound,
    eExistYet,
    eWordCut,
    eTokenLength
} SdifErrorTagET;
typedef enum SdifErrorLevelE
{
        eFatal,
        eError,
        eWarning,
        eRemark,
        eNoLevel,
        eNumLevels      
} SdifErrorLevelET;
typedef struct SdifErrorS SdifErrorT;
struct SdifErrorS
{
        SdifErrorTagET          Tag;
        SdifErrorLevelET        Level;
        char*                   UserMess;
};
typedef struct SdifErrorLS SdifErrorLT;
struct SdifErrorLS
{
  SdifListT*    ErrorList;
  SdifFileT*    SdifF; 
};
typedef void (*SdifExitFuncT) (void);
typedef void (*SdifExceptionFuncT) (SdifErrorTagET   error_tag, 
                                    SdifErrorLevelET error_level, 
                                    char *error_message, 
                                    SdifFileT *error_file, 
                                    SdifErrorT *error_ptr, 
                                    char *source_file, int source_line);
typedef enum SdifFileModeE
{
  eUnknownFileMode,     
  eWriteFile,
  eReadFile,
  eReadWriteFile,
  ePredefinedTypes,     
  eModeMask = 7,        
  eParseSelection = 8
} SdifFileModeET ;
enum SdifPassE
{
  eNotPass,
  eReadPass,
  eWritePass
};
#define MaxUserData     10
struct SdifFileS
{
  char               *Name;             
  SdifFileModeET     Mode;              
  int                isSeekable;        
  SdifUInt4          FormatVersion;     
  SdifUInt4          TypesVersion;      
  SdifNameValuesLT   *NameValues;       
  SdifHashTableT     *MatrixTypesTable; 
  SdifHashTableT     *FrameTypesTable;  
  SdifStreamIDTableT *StreamIDsTable;   
  SdifTimePositionLT *TimePositions;    
  SdifSelectionT     *Selection;        
  FILE *Stream;                         
  SdifSignature      CurrSignature;
  SdifFrameHeaderT   *CurrFramH;        
  SdifMatrixHeaderT  *CurrMtrxH;        
  SdifFrameTypeT     *CurrFramT;
  SdifMatrixTypeT    *CurrMtrxT;
  SdifFloat8         PrevTime;
  SdifSignatureTabT  *MtrxUsed;
  SdifOneRowT        *CurrOneRow;
  SdifMatrixDataT    *CurrMtrxData;
  size_t  FileSize;
  size_t  ChunkSize;
  SdiffPosT  CurrFramPos;
  SdiffPosT  StartChunkPos;
  SdiffPosT  Pos;
  SdifUInt2  TypeDefPass;
  SdifUInt2  StreamIDPass;
  char *TextStreamName;                 
  FILE *TextStream;                     
  SdifUInt4     ErrorCount [eNumLevels];
  SdifErrorLT  *Errors;                 
  int           NbUserData;             
  void          *UserData [MaxUserData];
};      
typedef struct SdifStringS SdifStringT;
struct SdifStringS
{
  char   *str; 
  size_t TotalSize; 
  size_t SizeW; 
  int    NbCharRead; 
};
SDIF_API int SdifCheckFileFormat (const char *name);
SDIF_API SdifSignature SdifCheckFileFramesTab (const char              *name, 
                                               const SdifSignatureTabT *frames);
SDIF_API int  SdifCheckFileFramesIndex (const char              *name, 
                                        const SdifSignature     *frames);
SDIF_API SdifSignature SdifCheckNextFrame (SdifFileT               *in, 
                                           const SdifSignatureTabT *frames,
                                           int                     *index);
SDIF_API SdifFileT* SdifFTryOpen (const char *Name, SdifFileModeET Mode);
SDIF_API size_t SdifToText (SdifFileT *SdifF, char *TextStreamName);
SDIF_API SdifFileT* SdifFOpen                   (const char *Name, SdifFileModeET Mode);
SDIF_API void SdifSetExitFunc (SdifExitFuncT func);
SDIF_API void SdifSetErrorFunc (SdifExceptionFuncT func);
SDIF_API void SdifSetWarningFunc (SdifExceptionFuncT func);
#define _SdifGranule            1024 
SDIF_API SdifHashTableT* SdifCreateHashTable(unsigned int HashSize, SdifHashIndexTypeET IndexType, void (*Killer)(void *));
SDIF_API size_t SdifFReadMatrixData   (SdifFileT *file);
SDIF_API SdifOneRowT*       SdifReInitOneRow          (SdifOneRowT *OneRow, SdifDataTypeET DataType, SdifUInt4 NbData);