python/executable/build/bdist.macosx-10.8-x86_64/python2.7-standalone/app/collect/pysdif/pysdif.pxd

    
    # 
    # 
    # 
    # /*DOC:
    #   Exit function type (See SdifSetExitFunc). */
    # typedef void (*SdifExitFuncT) (void);
    #ctypedef (*SdifExitFuncT) ()
    ctypedef void SdifExitFuncT()
    # 
    # /*DOC:
    #  Exception function type (See SdifSetErrorFunc and SdifSetWarningFunc). */
    # typedef void (*SdifExceptionFuncT) (SdifErrorTagET   error_tag, 
    #                                     SdifErrorLevelET error_level, 
    #                                     char *error_message, 
    #                                     SdifFileT *error_file, 
    #                                     SdifErrorT *error_ptr, 
    #                                     char *source_file, int source_line);
    # 
    ctypedef void (*SdifExceptionFuncT) (SdifErrorTagET   error_tag, 
                                     SdifErrorLevelET error_level, 
                                     char *error_message, 
                                     SdifFileT *error_file, 
                                     SdifErrorT *error_ptr, 
                                     char *source_file, int source_line)
    #
    # 
    # /* SdifFileStruct.h */
    # 
    # /*
    # // DATA GROUP:  SDIF File Structure
    # */
    # 
    # /*DOC:
    #   File mode argument for SdifFOpen. */
    # typedef enum SdifFileModeE
    # {
    #   eUnknownFileMode,     /* 0 */
    #   eWriteFile,
    #   eReadFile,
    #   eReadWriteFile,
    #   ePredefinedTypes,     /* 4 */
    # 
    #   eModeMask = 7,        /* get rid of flags */
    # 
    #   /* from here on we have flags that can be or'ed with the previous modes */
    #   eParseSelection = 8
    # } SdifFileModeET ;
    # 
    enum SdifFileModeE:
        eUnknownFileMode,
        eWriteFile,
        eReadFile,
        eReadWriteFile,
        ePredefinedTypes,     #/* 4 */
         
        eModeMask = 7,        #/* get rid of flags */
         
        #   /* from here on we have flags that can be or'ed with the previous modes */
        eParseSelection = 8
    ctypedef SdifFileModeE SdifFileModeET


    # 
    # enum SdifPassE
    # {
    #   eNotPass,
    #   eReadPass,
    #   eWritePass
    # };
    enum SdifPassE:
        eNotPass,
        eReadPass,
        eWritePass
    
    # 
    # 
    # /*
    # // DATA GROUP:          SDIF File Structure
    # */
    # 
    # #define MaxUserData     10
    # /*DOC:



    #   THE SDIF File Structure! */

    # struct SdifFileS
    # {
    #   char               *Name;             /* Name of the file, can be "stdin, stdout, stderr */
    #   SdifFileModeET     Mode;              /* eWriteFile or eReadFile or ePredefinedTypes */
    #   int                isSeekable;        /* file is not pipe i/o */
    # 
    #   SdifUInt4          FormatVersion;     /* version of the SDIF format itself */
    #   SdifUInt4          TypesVersion;      /* version of the description type collection */
    # 
    #   SdifNameValuesLT   *NameValues;       /* DataBase of Names Values */
    #   SdifHashTableT     *MatrixTypesTable; /* DataBase of Matrix Types */
    #   SdifHashTableT     *FrameTypesTable;  /* DataBase of Frame Types */
    # /*  SdifHashTableT     *StreamIDsTable;    DataBase of Stream IDs */
    #   SdifStreamIDTableT *StreamIDsTable;   /* DataBase of Stream IDs */
    #   SdifTimePositionLT *TimePositions;    /* List of (Time, Position in file) */
    #   SdifSelectionT     *Selection;        /* default selection parsed from Name */
    # 
    #   FILE *Stream;                         /* Stream to read or to write */
    # 
    #   SdifSignature      CurrSignature;
    #   SdifFrameHeaderT   *CurrFramH;        /* Current Frame Header can be NULL */
    #   SdifMatrixHeaderT  *CurrMtrxH;        /* Current Matrix Header can be NULL */
    # 
    #   SdifFrameTypeT     *CurrFramT;
    #   SdifMatrixTypeT    *CurrMtrxT;
    #   SdifFloat8         PrevTime;
    #   SdifSignatureTabT  *MtrxUsed;
    # 
    #   SdifOneRowT        *CurrOneRow;
    #   /* Current OneRow allocated memory in function
    #    * of _SdifGranule, use SdifReInitOneRow(SdifOneRowT *OneRow, SdifDataTypeET DataType, SdifUInt4 NbData)
    #    * to assure NbData (=NbColumns) objects memory allocated
    #    */
    # 
    #   /* data pointer used by SdifFReadMatrixData, never uses the Header field */
    #   SdifMatrixDataT    *CurrMtrxData;
    # 
    #   size_t  FileSize;
    #   size_t  ChunkSize;
    # 
    #   SdiffPosT  CurrFramPos;
    #   SdiffPosT  StartChunkPos;
    #   SdiffPosT  Pos;
    #   
    #   SdifUInt2  TypeDefPass;
    #   SdifUInt2  StreamIDPass;
    # 
    #   char *TextStreamName;                 /* Name of the text file corresponding to the sdif file */
    #   FILE *TextStream;                     /* Stream text */
    # 
    #   SdifUInt4     ErrorCount [eNumLevels];/* Error count per level of severity */
    #   SdifErrorLT  *Errors;                 /* List of errors or warnings */
    # 
    #   int           NbUserData;             /* todo: hash table */
    #   void          *UserData [MaxUserData];
    # };      /* end struct SdifFileS */


    struct SdifFileS:
        char               *Name  #-- ;             /* Name of the file, can be "stdin, stdout, stderr */
        SdifFileModeET     Mode  #-- ;              /* eWriteFile or eReadFile or ePredefinedTypes */
        int                isSeekable  #-- ;        /* file is not pipe i/o */
        SdifUInt4          FormatVersion  #-- ;     /* version of the SDIF format itself */
        SdifUInt4          TypesVersion  #-- ;      /* version of the description type collection */
        SdifNameValuesLT   *NameValues  #-- ;       /* DataBase of Names Values */
        SdifHashTableT     *MatrixTypesTable  #-- ; /* DataBase of Matrix Types */
        SdifHashTableT     *FrameTypesTable  #-- ;  /* DataBase of Frame Types */
        # /*  SdifHashTableT     *StreamIDsTable;    DataBase of Stream IDs */
        SdifStreamIDTableT *StreamIDsTable    #/* DataBase of Stream IDs */
        SdifTimePositionLT *TimePositions     #/* List of (Time, Position in file) */
        SdifSelectionT     *Selection         #/* default selection parsed from Name */
        FILE *Stream  #-- ;                         #/* Stream to read or to write */
        SdifSignature      CurrSignature
        SdifFrameHeaderT   *CurrFramH         #/* Current Frame Header can be NULL */
        SdifMatrixHeaderT  *CurrMtrxH         #/* Current Matrix Header can be NULL */
        SdifFrameTypeT     *CurrFramT
        SdifMatrixTypeT    *CurrMtrxT
        SdifFloat8         PrevTime
        SdifSignatureTabT  *MtrxUsed
        SdifOneRowT        *CurrOneRow
        #   /* Current OneRow allocated memory in function
        #    * of _SdifGranule, use SdifReInitOneRow(SdifOneRowT *OneRow, SdifDataTypeET DataType, SdifUInt4 NbData)
        #    * to assure NbData (=NbColumns) objects memory allocated
        #    */
        # 
        #   /* data pointer used by SdifFReadMatrixData, never uses the Header field */
        SdifMatrixDataT    *CurrMtrxData
        size_t  FileSize
        size_t  ChunkSize
        SdiffPosT  CurrFramPos
        SdiffPosT  StartChunkPos
        SdiffPosT  Pos
        SdifUInt2  TypeDefPass
        SdifUInt2  StreamIDPass
        char *TextStreamName                  #/* Name of the text file corresponding to the sdif file */
        FILE *TextStream                      #/* Stream text */
        # SdifUInt4     ErrorCount [eNumLevels] #/* Error count per level of severity */
        SdifErrorLT  *Errors                  #/* List of errors or warnings */
        int           NbUserData              #/* todo: hash table */
        void          *UserData [MaxUserData]

    # };      /* end struct SdifFileS */


    # 
    # 
    # 
    # 
    # 
    # 
    # 
    # /* SdifString.h */
    # 
    # typedef struct SdifStringS SdifStringT;
    # struct SdifStringS
    # {
    #   char   *str; 
    #   size_t TotalSize; /* Memory size allocated for str */
    #   size_t SizeW; /* Memory size actually used */
    #   int    NbCharRead; /* Number of char read */
    # };
    struct SdifStringS:
        char   *str
        size_t TotalSize  #-- ; #/* Memory size allocated for str */
        size_t SizeW  #-- ; #/* Memory size actually used */
        int    NbCharRead  #-- ; #/* Number of char read */
    ctypedef SdifStringS SdifStringT
    # 
    # 
    # /*DOC: 
    #   Test if file is an SDIF file.
    # 
    #   [] Returns:   0 if not an SDIF file (the first 4 chars are not "SDIF"),
    #                 or file can not be opened, else 1.  
    # 
    #   Warning: This function doesn't work with stdio. */
    # int SdifCheckFileFormat (const_char_ptr name);
    int SdifCheckFileFormat (const_char_ptr name)
    # 
    # 
    # /*DOC: 
    #   Test if file contains frames of certain types.
    # 
    #   [in]  name    Filename + selection
    #         frames  Table of frame signatures to look for
    #   []    return  The first signature from frames found, or eEmptySignature if 
    #                 no frames could be found (or if file is not SDIF).
    # 
    #   Warning: This function doesn't work with stdio. */
    # SdifSignature SdifCheckFileFramesTab (const char              *name, 
    #                                                const SdifSignatureTabT *frames);
    ctypedef SdifSignatureTabT* const_SdifSignatureTabT_ptr "const SdifSignatureTabT*"
    SdifSignature SdifCheckFileFramesTab (const_char_ptr name, const_SdifSignatureTabT_ptr frames)

    # 
    # /*DOC: 
    #   Test if file contains frames of certain types.
    # 
    #   [in]  name    Filename + selection
    #         frames  Array of frame signatures to look for, terminated with 
    #                 eEmptySignature.
    #   []    return  The index in frames of the first signature found, or -1
    #                 if no frames could be found (or if file is not SDIF).
    # 
    #   Warning: This function doesn't work with stdio. */
    # int  SdifCheckFileFramesIndex (const char              *name, 
    #                                         const SdifSignature     *frames);
    ctypedef SdifSignature* const_SdifSignature_ptr "const SdifSignature*"
    int SdifCheckFileFramesIndex (const_char_ptr name, const_SdifSignature_ptr frames)
    #

    # /*DOC: 
    #   Test if file contains frames of certain types.
    # 
    #   [in]  in      open SDIF file
    #         frames  Table of frame signatures to look for
    #   [out] index   If the int pointer index is not NULL, it will receive
    #                 the index in frames of the first signature found, or -1
    #                 if no frames could be found (or if file is not SDIF).
    #   []    return  The first signature from frames found, or eEmptySignature if 
    #                 no frames could be found (or if file is not SDIF).
    # 
    #   Warning: This function doesn't work with stdio. */
    # SdifSignature SdifCheckNextFrame (SdifFileT               *in, 
    #                                            const SdifSignatureTabT *frames,
    #                                            int                     *index);
    # 
    # /*DOC: 
    #   TODO: Test if file is an SDIF file (only when opening for read or
    #   append) and open it.
    # 
    #   [Return] NULL if not an SDIF file (the first 4 chars are not "SDIF"),
    #   or file can not be opened.  */
    # SdifFileT* SdifFTryOpen (const_char_ptr Name, SdifFileModeET Mode);  
    SdifFileT* SdifFTryOpen (const_char_ptr Name, SdifFileModeET Mode)
    # 
    # 
    # /*DOC: 
    #   Converti un fichier texte pseudo-SDIF de nom TextStreamName en un
    #   fichier SDIF binaire de non SdifF->Name. Le fichier doit avoir ete
    #   ouvert en ecriture (eWriteFile).  */
    # size_t SdifToText (SdifFileT *SdifF, char *TextStreamName);
    size_t SdifToText (SdifFileT *SdifF, char *TextStreamName)
